fixed button alignment

--- a/src/index.css
+++ b/src/index.css
@@ -223,7 +223,7 @@ body {
 .resultsOrderAndLength {
   display: inline-flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   width: 100%;
   margin-bottom: 0;
